force-app/main/default/objects/Opportunity/fields/Internal_Quote_URL__c.field-meta.xml
<CustomField>
    <fullName>Internal_Quote_URL__c</fullName>
    <label>Internal Quote URL</label>
    <type>Url</type>
</CustomField>