force-app/main/default/objects/Opportunity/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Will show the related Sales Document once Posted; Started FY25</description>
    <inlineHelpText>Related Invoice (will be blank if not yet Posted)</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>Sales_Document__c</referenceTo>
    <relationshipLabel>Original Opportunity</relationshipLabel>
    <relationshipName>Original_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>