force-app/main/default/objects/Opportunity/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Only required for Early Order, otherwise this will be the same as the Requested Delivery Date</description>
    <inlineHelpText>Only required for Early Order, otherwise this will be the same as the Requested Delivery Date</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>