force-app/main/default/objects/Opportunity/fields/Is_Automation_Bypassed__c.field-meta.xml
<CustomField>
    <fullName>Is_Automation_Bypassed__c</fullName>
    <description>Checked if AutomationBypassDateTime is greater than NOW - 20 Seconds</description>
    <formula>BypassAutomationDateTime__c &gt; (NOW() - 0.00023148148)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Automation Bypassed?</label>
    <type>Checkbox</type>
</CustomField>