force-app/main/default/objects/Opportunity/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <defaultValue>IF( $RecordType.Name = &apos;Sports Opp - Maintenance&apos;, &apos;Maintenance&apos;,
IF(  $RecordType.Name = &apos;Sports Opp - Construction&apos;, &apos;Construction&apos;, 
 null
))</defaultValue>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>