force-app/main/default/objects/Opportunity/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>No Longer needed - links to custom ATS Location Object and we are now using Standard Location</description>
    <label>Location (Deprecated)</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>