force-app/main/default/objects/Opportunity/fields/Location_Number__c.field-meta.xml
<CustomField>
    <fullName>Location_Number__c</fullName>
    <formula>Warehouse__r.Location_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location #</label>
    <type>Text</type>
</CustomField>