force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>ATS would like to require this in the future on Closed Lost Stage (Validation Rule)</description>
    <inlineHelpText>Please use if you are using the Stage &quot;Closed Lost&quot; to move this Opportunity off your Active list, but did not &quot;Win&quot;</inlineHelpText>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Lost Bid</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Price Only</fullName>
            </value>
            <value>
                <fullName>Expired Quote</fullName>
            </value>
            <value>
                <fullName>Scheduling Conflict</fullName>
            </value>
            <value>
                <fullName>Chose Other Opportunity</fullName>
                <label>Chose Other ATS Opportunity</label>
            </value>
            <value>
                <fullName>Delayed/Potential Future</fullName>
                <label>Delayed / Potential Future</label>
            </value>
            <value>
                <fullName>Inventory or Backorder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>