force-app/main/default/objects/Opportunity/fields/Maint_Adequate_Staffing__c.field-meta.xml
<CustomField>
    <fullName>Maint_Adequate_Staffing__c</fullName>
    <label>Adequate Staffing?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>