force-app/main/default/objects/Opportunity/fields/Maint_Drainage_Needs__c.field-meta.xml
<CustomField>
    <fullName>Maint_Drainage_Needs__c</fullName>
    <inlineHelpText>Please describe the drainage needs</inlineHelpText>
    <label>Drainage Needs?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>