force-app/main/default/objects/Opportunity/fields/Maint_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Maint_Equipment__c</fullName>
    <label>Maintenance Equipment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>