force-app/main/default/objects/Opportunity/fields/Maint_Field_Accessibility__c.field-meta.xml
<CustomField>
    <fullName>Maint_Field_Accessibility__c</fullName>
    <label>Field Accessibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>