force-app/main/default/objects/Opportunity/fields/Maint_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Maint_Frequency__c</fullName>
    <label>Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>