force-app/main/default/objects/Opportunity/fields/Maint_Water_Source__c.field-meta.xml
<CustomField>
    <fullName>Maint_Water_Source__c</fullName>
    <label>Water Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hose</fullName>
            </value>
            <value>
                <fullName>Line Dimension</fullName>
            </value>
            <value>
                <fullName>Water Wagon</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>