force-app/main/default/objects/Opportunity/fields/Make_Order_Add_Shipping_URL__c.field-meta.xml
<CustomField>
    <fullName>Make_Order_Add_Shipping_URL__c</fullName>
    <formula>&quot;https://advancedturf.lightning.force.com/apex/APXTConga4__Conga_Composer?ServerURL=&quot;+ $Api.Partner_Server_URL_370 + Make_Order_Add_Shipping_PDF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Make Order Add Shipping URL</label>
    <type>Text</type>
</CustomField>