force-app/main/default/objects/Opportunity/fields/Make_Order_Sales_Rep_URL__c.field-meta.xml
<CustomField>
    <fullName>Make_Order_Sales_Rep_URL__c</fullName>
    <formula>&quot;https://advancedturf.lightning.force.com/apex/APXTConga4__Conga_Composer?ServerURL=&quot;+ $Api.Partner_Server_URL_370 +  Make_Order_Sales_Rep_pdf__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Make Order Sales Rep URL</label>
    <type>Text</type>
</CustomField>