force-app/main/default/objects/Opportunity/fields/Manager_User__c.field-meta.xml
<CustomField>
    <fullName>Manager_User__c</fullName>
    <description>Check if the current viewer is the manager of the Sales Rep on this Opp</description>
    <formula>Sales_Rep__r.Manager__c =  $User.Id</formula>
    <label>Manager User?</label>
    <type>Checkbox</type>
</CustomField>