force-app/main/default/objects/Opportunity/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <formula>Total_Amount__c -  Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>