force-app/main/default/objects/Opportunity/fields/multi_quote__c.field-meta.xml
<CustomField>
    <fullName>multi_quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set in a flow used for multi-quote quip process. Used for populating the report in the quip document</description>
    <label>multi-quote</label>
    <type>Checkbox</type>
</CustomField>