force-app/main/default/objects/Opportunity/fields/My_Location__c.field-meta.xml
<CustomField>
    <fullName>My_Location__c</fullName>
    <formula>IF(  Warehouse__r.Location_Number__c  =  $User.My_Location__c , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Location?</label>
    <type>Checkbox</type>
</CustomField>