force-app/main/default/objects/Opportunity/fields/My_Opp__c.field-meta.xml
<CustomField>
    <fullName>My_Opp__c</fullName>
    <formula>IF( Sales_Rep__r.Salesforce_User__r.Id = $User.Id , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Opp?</label>
    <type>Checkbox</type>
</CustomField>