force-app/main/default/objects/Opportunity/fields/Number_of_Lines__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Lines__c</fullName>
    <description>Count all Lines on the Opportunity, regardless of Stock Status, SKU or Category</description>
    <inlineHelpText>Count all Lines on the Opportunity, regardless of Stock Status, SKU or Category</inlineHelpText>
    <label># of Lines</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>