force-app/main/default/objects/Opportunity/fields/Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Payments__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <label>Number of Payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>