force-app/main/default/objects/Opportunity/fields/OF_Quotes__c.field-meta.xml
<CustomField>
    <fullName>OF_Quotes__c</fullName>
    <label># OF Quotes</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>