force-app/main/default/objects/Opportunity/fields/Open_Order__c.field-meta.xml
<CustomField>
    <fullName>Open_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Will show the related Open Order (only if it is still Open, Docs are removed from Salesforce upon posting as Invoice); Started FY25</description>
    <inlineHelpText>Related Open Order (will be blank if Order is no longer Open)</inlineHelpText>
    <label>Open Order</label>
    <referenceTo>Open_Order__c</referenceTo>
    <relationshipLabel>Original Opportunity</relationshipLabel>
    <relationshipName>Original_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>