force-app/main/default/objects/Opportunity/fields/Opp_From_Quote__c.field-meta.xml
<CustomField>
    <fullName>Opp_From_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opp From Quote</label>
    <type>Checkbox</type>
</CustomField>