force-app/main/default/objects/Opportunity/fields/Opp_Has_Account_Price_book__c.field-meta.xml
<CustomField>
    <fullName>Opp_Has_Account_Price_book__c</fullName>
    <formula>IF( Account.Account_Based_Pricebook_Created__c = True, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Has Account Price book</label>
    <type>Checkbox</type>
</CustomField>