force-app/main/default/objects/Opportunity/fields/Opp_Has_Account_Price_book_FlowVersion__c.field-meta.xml
<CustomField>
    <fullName>Opp_Has_Account_Price_book_FlowVersion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opp Has Account Price book(FLOW)</label>
    <type>Checkbox</type>
</CustomField>