force-app/main/default/objects/Opportunity/fields/Order_Comments__c.field-meta.xml
<CustomField>
    <fullName>Order_Comments__c</fullName>
    <label>Customer Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>