force-app/main/default/objects/Opportunity/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>The Order Number of the Opportunity created in the ERP (Salespad/GP)</description>
    <inlineHelpText>The Order Number of the Opportunity created in the ERP (Salespad/GP)</inlineHelpText>
    <label>Order #</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>