force-app/main/default/objects/Opportunity/fields/Order_Submitted_Notify_COP_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Order_Submitted_Notify_COP_Warehouse__c</fullName>
    <description>##Conga created button:00b2M000002QK2M</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[OppLineItem]0Q_006EAC868745,[OppLineItem2]0Q_007EAC571956,[OppLineItem3]0Q_008EAC377528&quot; + 
&quot;&amp;templateid=a2O2M000009Xt6FUAS&quot; + 
&quot;&amp;congaemailtemplateid=0E_006EAC232959&quot; + 
&quot;&amp;sc0=1&quot; + 
&quot;&amp;ds2=0&quot; + 
&quot;&amp;ds3=1&quot; + 
&quot;&amp;ds4=1&quot; + 
&quot;&amp;ds5=1&quot; + 
&quot;&amp;ds6=1&quot; + 
&quot;&amp;qmode=SendEmail&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;fp0=1&quot; + 
&quot;&amp;emailtoid= &quot; + 
&quot;&amp;emailadditionalto=&quot; + IF(ISPICKVAL(Ship_Type__c, &quot;DS&quot;), &quot;dropship@advancedturf.com&quot;, Warehouse_Order_Notification_Group__c) + IF(ISBLANK(Warehouse_Order_Notification_Group__c), &quot;cop@advancedturf.com&quot;, Null) + &quot;,&quot; + Sales_Rep_Email__c +
&quot;&amp;ofn=Operations PDF - &quot; + Account.Name + &quot; - Quote &quot; + Quote_Number_Text__c +
&quot;&amp;uf0=1&quot; + 
&quot;&amp;mfts0=Did_Conga_Trigger_Fire__c&quot; + 
&quot;&amp;mftsvalue0=TRUE&quot;</formula>
    <label>Order Submitted Notify COP Warehouse</label>
    <type>Text</type>
</CustomField>