force-app/main/default/objects/Opportunity/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>Type of order</description>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Bulk Foliar-Pak</fullName>
            </value>
            <value>
                <fullName>EOP</fullName>
            </value>
            <value>
                <fullName>Parts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>