force-app/main/default/objects/Opportunity/fields/Parts_Order__c.field-meta.xml
<CustomField>
    <fullName>Parts_Order__c</fullName>
    <description>Indicates the Opportunity is for the 125 Warehouse (Parts or Standard) - used for order notifications</description>
    <formula>OR(CONTAINS( Warehouse__r.Name, &quot;125&quot;),CONTAINS( Warehouse__r.Name, &quot;Parts&quot;))</formula>
    <label>Parts Order?</label>
    <type>Checkbox</type>
</CustomField>