force-app/main/default/objects/Opportunity/fields/Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>Pay_Type__c</fullName>
    <label>Pay Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Types</valueSetName>
    </valueSet>
</CustomField>