force-app/main/default/objects/Opportunity/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <formula>TEXT(Account.Payment_Terms__c)</formula>
    <label>Payment Type</label>
    <type>Text</type>
</CustomField>