force-app/main/default/objects/Opportunity/fields/PB_Test__c.field-meta.xml
<CustomField>
    <fullName>PB_Test__c</fullName>
    <label>PB Test</label>
    <length>100</length>
    <type>Text</type>
</CustomField>