force-app/main/default/objects/Opportunity/fields/PDF_Discount_Info__c.field-meta.xml
<CustomField>
    <fullName>PDF_Discount_Info__c</fullName>
    <description>Discount Percentage Text for Conga Word Template/PDF Generation</description>
    <formula>IF( Discount_Percentage__c &gt; 0, &quot;Discount of &quot; + TEXT((Discount_Percentage__c * 100)) + &quot;% Applied&quot; , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Discount Percentage Text for Conga Word Template/PDF Generation</inlineHelpText>
    <label>PDF Discount Info</label>
    <type>Text</type>
</CustomField>