force-app/main/default/objects/Opportunity/fields/PDF_EOP_Info__c.field-meta.xml
<CustomField>
    <fullName>PDF_EOP_Info__c</fullName>
    <description>PDF / Notes text displaying if Early Order and Bill and Hold are Selected</description>
    <formula>IF( AND(TEXT( EOP_Order__c ) = &quot;Yes&quot;,TEXT(BH_Yes_No__c) = &quot;YES&quot;),
     &quot; *** EARLY ORDER *** BILL AND HOLD *** &quot;, 
     IF( TEXT( EOP_Order__c ) = &quot;Yes&quot;,&quot; *** EARLY ORDER *** &quot;,&quot;&quot;))</formula>
    <inlineHelpText>PDF / Notes text displaying if Early Order and Bill and Hold are Selected</inlineHelpText>
    <label>PDF EOP Info</label>
    <type>Text</type>
</CustomField>