force-app/main/default/objects/Opportunity/fields/PDF_EOP_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>PDF_EOP_Invoice_Date__c</fullName>
    <description>Conditionally Show Invoice Date Field on Operations PDF Copy</description>
    <formula>IF( TEXT( EOP_Order__c ) = &quot;Yes&quot;,&quot; *** EOP Invoice Date: &quot; + TEXT( MONTH( Invoice_Date__c ) ) + &quot;/&quot; &amp; TEXT( DAY( Invoice_Date__c ) ) + &quot;/&quot; + TEXT( YEAR( Invoice_Date__c ) )  ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF EOP Invoice Date</label>
    <type>Text</type>
</CustomField>