force-app/main/default/objects/Opportunity/fields/PDF_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>PDF_Order_Type__c</fullName>
    <description>Used on order notification email (Conga) for the subject line to make EOP stand out</description>
    <formula>IF( TEXT( EOP_Order__c ) = &quot;Yes&quot;,&quot;EOP &quot;,&quot;Standard &quot;)</formula>
    <label>PDF Order Type</label>
    <type>Text</type>
</CustomField>