force-app/main/default/objects/Opportunity/fields/PDF_Terms_Info__c.field-meta.xml
<CustomField>
    <fullName>PDF_Terms_Info__c</fullName>
    <description>PDF Text that shows EOP Terms if applicable, otherwise selected Pay Type</description>
    <formula>IF( ISBLANK( TEXT(EOP_Pay_Type__c) ) = False , &quot;Early Order Terms: &quot; + TEXT( Number_of_Payments__c ) + &quot; Payments.  First Invoice Due &quot; +  TEXT (First_Due_Date__c)  , &quot;Pay Type: &quot; + Quote_Payment_Terms__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>PDF Text that shows EOP Terms if applicable, otherwise selected Pay Type</inlineHelpText>
    <label>PDF Terms Info</label>
    <type>Text</type>
</CustomField>