force-app/main/default/objects/Opportunity/fields/Pest_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Pest_Expiration_Date__c</fullName>
    <description>Formula the expiration date on record. It&apos;s used in CPQ</description>
    <formula>Account.Pest_License_Exp_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pest. Expiration Date</label>
    <type>Date</type>
</CustomField>