force-app/main/default/objects/Opportunity/fields/PO_Override__c.field-meta.xml
<CustomField>
    <fullName>PO_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Override</label>
    <type>Checkbox</type>
</CustomField>