force-app/main/default/objects/Opportunity/fields/Price_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Name__c</fullName>
    <description>Show the Price Book Name of the Linked Price Book for this Opp</description>
    <formula>Pricebook2.Name</formula>
    <label>Price Book Name</label>
    <type>Text</type>
</CustomField>