force-app/main/default/objects/Opportunity/fields/Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost__c</fullName>
    <description>Total ATS Product Cost</description>
    <label>Product Cost</label>
    <summarizedField>Opportunity_Product__c.Extended_Cost__c</summarizedField>
    <summaryForeignKey>Opportunity_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>