force-app/main/default/objects/Opportunity/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>Description of Products needed for the Project (Optional)</description>
    <inlineHelpText>Description of Products needed for the Project (Optional)</inlineHelpText>
    <label>Product Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>