force-app/main/default/objects/Opportunity/fields/Product_GP__c.field-meta.xml
<CustomField>
    <fullName>Product_GP__c</fullName>
    <description>Gross Profit of Order for ATS Products Only</description>
    <formula>Product_Total__c - Product_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Profit of Order for ATS Products Only</inlineHelpText>
    <label>Product GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>