force-app/main/default/objects/Opportunity/fields/Products_Requested_and_Price_3__c.field-meta.xml
<CustomField>
    <fullName>Products_Requested_and_Price_3__c</fullName>
    <label>Products Requested and Price</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>