force-app/main/default/objects/Opportunity/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>This field is used to track if we need to split the opportunity into multiple applications</description>
    <inlineHelpText>Does this opportunity require multiple applications. If yes, please clearly indicate the difference in applications in your description</inlineHelpText>
    <label>Program?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>