force-app/main/default/objects/Opportunity/fields/Quote_Approved__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is updated via the JDT Quote Approval Process Builder. Can be used to filter it was created to be used as a flag for showing opportunities on the calendar. This way reps could see opportunities with approved quotes and targeted start / end dates</description>
    <label>Quote Approved</label>
    <type>Checkbox</type>
</CustomField>