force-app/main/default/objects/Opportunity/fields/Quote_From_Following_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>Quote_From_Following_Suppliers__c</fullName>
    <label>Quote From Following Suppliers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>