force-app/main/default/objects/Opportunity/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Quote Number will be auto-assigned when in Quote or Closed Won Stage</inlineHelpText>
    <label>Quote Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>