force-app/main/default/objects/Opportunity/fields/Quote_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number_Text__c</fullName>
    <description>Used to remove the comma from the Quote Number for Merge Field purposes.</description>
    <formula>TEXT(Quote_Number__c)</formula>
    <label>Quote Number Text</label>
    <type>Text</type>
</CustomField>