force-app/main/default/objects/Opportunity/fields/Quote_Payment_Terms_GP__c.field-meta.xml
<CustomField>
    <fullName>Quote_Payment_Terms_GP__c</fullName>
    <description>Used for sending the Payment Terms to GP.</description>
    <formula>CASE(Alternate_Pay_Type__c, &quot;COD/CASH&quot;, &quot;COD/CASH&quot;, &quot;COD/CC&quot;, &quot;COD/CC&quot;, &quot;COD/CK&quot;, &quot;COD/CK&quot;, &quot;THIRD PARTY FINANCING&quot;, &quot;THIRD PARTY FINANCIN&quot;, Payment_Type__c)</formula>
    <label>Quote Payment Terms GP</label>
    <type>Text</type>
</CustomField>