force-app/main/default/objects/Opportunity/fields/Quote_Priced__c.field-meta.xml
<CustomField>
    <fullName>Quote_Priced__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when you are done pricing the items and ready to submit to SalesPad (so customer can view pricing)</inlineHelpText>
    <label>Done Pricing</label>
    <type>Checkbox</type>
</CustomField>