force-app/main/default/objects/Opportunity/fields/Quote_Stage__c.field-meta.xml
<CustomField>
    <fullName>Quote_Stage__c</fullName>
    <description>Stage of the Quote for this Opportunity (related workflow may also impact Opportunity Stage)</description>
    <inlineHelpText>Stage of the Quote for this Opportunity</inlineHelpText>
    <label>Quote Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Presented</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <isActive>false</isActive>
                <label>Customer Accepted</label>
            </value>
            <value>
                <fullName>Denied</fullName>
                <isActive>false</isActive>
                <label>Customer Denied</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>