force-app/main/default/objects/Opportunity/fields/quoteId__c.field-meta.xml
<CustomField>
    <fullName>quoteId__c</fullName>
    <formula>SyncedQuoteId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>quoteId</label>
    <type>Text</type>
</CustomField>