force-app/main/default/objects/Opportunity/fields/Ready_for_Salespad__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Salespad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Salespad?</label>
    <type>Checkbox</type>
</CustomField>