force-app/main/default/objects/Opportunity/fields/Request_Multi_Quote__c.field-meta.xml
<CustomField>
    <fullName>Request_Multi_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Multi Quote</label>
    <type>Checkbox</type>
</CustomField>